# Spiderette-Strategy-Lab

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  _css_b64.txt  _win_err.txt  build.bat  config.toml  main.py  pyproject.toml  spiderette.spec  更新日志.md  法律声明.md  算法研究方向.md  项目开发规范.md
docs/: api.md  meta.json  modules.md  project_structure.md  strategies.md
experiments/results/: benchmark_report.json  benchmark_results.csv  benchmark_summary.txt  neural_model.npz  report.md  strategy_profile_20260504_010555.txt
manifests/: custom_mcts_v2.json
src/: __init__.py
src/analysis/: batch.py  compare.py  exporter.py  factor.py  genetic.py  metrics.py  pattern.py  profile.py  report.py  runner.py  scenario.py  tournament.py  tuning.py  utils.py  weakness.py
src/core/: exceptions.py  info_set.py  manifest.py  rules.py  session.py  types.py
src/envs/: generator.py  simulator.py
src/iteration/: __init__.py  engine.py
src/network/: __init__.py  feature_v2.py
src/rl/: __init__.py  curriculum.py  environment.py  self_play.py
src/search/: puct.py  (+3 more)
tests/: _gen.py  _gen_test.py  conftest.py  test_analysis.py  test_analysis_extended.py  test_api_match.py  test_compose.py  test_generator.py  test_heuristics.py  test_iteration.py  test_mcts.py  test_neural.py  test_registry.py  test_rl.py  test_rules.py  test_search.py  test_server.py  test_session.py  test_simulator.py  test_sync_docs.py  test_types.py
tools/: .file_hashes.json  .symbol_snapshots.json  apply_css.py  gen_template.py  new_theme.css  post_improve.py  readme_template.md  sync_docs.py
(+19 files in other folders)
